--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "lib"
   ],
   "dependencies": {
-    "prop-types": "^15.6.0",
     "qr.js": "0.0.0"
   },
   "peerDependencies": {
-    "react": "^15.5.3 || ^16.0.0"
+    "react": "^15.5.3 || ^16.0.0",
+    "prop-types": "^15.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.39",
